Add dto, service, test